--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 :root {
     --branco: white;
-    --cor-de-fundo: rgb(243, 22, 206);
+    --cor-de-fundo: rgba(238, 100, 37, 0.473);
     --fundo-senha: #4286d4;
     --fundo-texto: #690052;
     --borda: #0075FF;
